1.22
 * Minimum supported Python version is now 2.4
 * Online documentation at https://mutagen.readthedocs.org/
 * EasyID3:
   * Fix crash with empty TXXX values. (#135)
 * MP4:
   * add_tags() will not replace existing tags. (#101)
   * Don't ignore tags if parsing unknown atoms fails.
 * APEv2:
   * Handle invalid tag item count. (#145, Dawid Zamirski)

1.21 - 2013.01.30
 * Fix Python 2.3 compatibility (broken in 1.19).
 * Fix many warnings triggered by -3. (#27)
 * mid3v2:
   * Add --TXXX support. (#62, Tim Phipps)
   * Add --POPM support. (#71)
   * Allow setting multiple COMM or TXXX frames with one command line.
 * FLAC:
   * Try to handle corrupt Vorbis comment block sizes. (#52)
   * Try to handle corrupt Picture block sizes (#106, Christoph Reiter)
   * Don't leak file handle with PyPy (#111, Marien Zwart)
 * ID3:
   * MakeID3v1: Do not generate bad tags when given short dates. (#69)
   * ParseID3v1: Parse short (< 128 byte) tags generated by old Mutagen
     implementations of MakeID3v1, and tags with garbage on the front.
   * pprint: Sort frames by name.
   * Upgrade unknown 2.3 frames (#97, Christoph Reiter)
   * Fix handling of invalid SYLT frames (#105, Christoph Reiter)
 * MP3:
   * Fix error when loading extremely small MP3s. (#72)
   * Fix rounding error in CBR length calculation (#93, Christoph Reiter)
 * Use 'open' rather than 'file' everywhere. (#74, Dan Callahan)
 * mid3iconv:
   * Accurately copy QL-style frame encoding behavior. (#75)
   * Skip unopenable files. (#79)
 * ID3FileType:
   * Remember which tag type load() was called with even if the file
     doesn't yet have any ID3 tags. (#89)
 * VComment:
   * Prevent MemoryError when parsing invalid header (#112, Jyrki Pulliainen)
 * ASF:
   * Don't corrupt files on the second save() call (#81, Christoph Reiter)
   * Always store GUID objects in the MetadataLibraryBlock (#81)
 * OggTheora: Fix length/bitrate calculation. (#99, Christoph Reiter)
 * MP4: