@@ -8,6 +8,8 @@
    * Don't ignore tags if parsing unknown atoms fails.
  * APEv2:
    * Handle invalid tag item count. (#145, Dawid Zamirski)
+ * Ogg:
+   * Faster parsing of files with large packets.
 
 1.21 - 2013.01.30
  * Fix Python 2.3 compatibility (broken in 1.19).
